Adição do método updateVehicle.
