# src/main/resources/openapi.yaml
@@ -48,6 +48,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/VehicleResponse'
 
+    put:
+      summary: Atualizar informações de um veículo
+      operationId: updateVehicle
+      tags:
+        - Vehicle
+      parameters:
+        - name: vehicleId
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VehicleRequest'
+      responses:
+        '200':
+          description: Veículo atualizado
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VehicleResponse'
+
   /vehicles/{vehicleId}/maintenances:
     post:
       summary: Registra uma nova manutenção para um veículo
